--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -38,19 +38,30 @@ jobs:
 #      with:
 #        path: .commitHash
 #        key: HEAD-${{ steps.getHash.outputs.commitHash }}
-
-#    - name: Save New Commit Hash
-#      if: steps.cacheHash.outputs.cache-hit != 'true'
-#      run: |
-#        echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
-
+#
     - name: Trigger build
-      if: steps.cacheHash.outputs.cache-hit != 'true'
+      if: steps.cacheHash.outputs.cache-hit != 'true' && !contains(jobs.build-x86.outputs.job-status, 'in_progress')
       uses: peter-evans/repository-dispatch@v2
       with:
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         event-type: lede Source Code Update
 
+    - name: Run Build-x86.yml
+      if: github.event.repository.name == 'Build-OpenWRT' && github.event_name == 'repository_dispatch' && !contains(jobs.build-x86.outputs.job-status, 'in_progress')
+      uses: ./.github/workflows/Build-OpenWRT.yml
+
+#    - name: Save New Commit Hash
+#      if: steps.cacheHash.outputs.cache-hit != 'true'
+#      run: |
+#        echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
+#
+#    - name: Trigger build
+#      if: steps.cacheHash.outputs.cache-hit != 'true'
+#      uses: peter-evans/repository-dispatch@v2
+#      with:
+#        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
+#        event-type: lede Source Code Update
+#
     - name: Source Code Update notification
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
